<resources>
    <string name="app_name">SMHS</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="weight_metric">Weight in kg</string>
    <string name="height_metric">Height in m</string>
    <string name="weight_imperial">Weight in pounds</string>
    <string name="height_imperial">Height in inch</string>
    <string name="more_information">More information on Wikipedia</string>
    <string name="wikipedia_bmi_link">https://en.wikipedia.org/wiki/Body_mass_index</string>
    <string name="bmi_result">BMI: %s</string>
    <string name="bmi_cat_1">Very severely underweight</string>
    <string name="bmi_cat_2">Severely underweight</string>
    <string name="bmi_cat_3">Underweight</string>
    <string name="bmi_cat_4">Normal (healthy weight)</string>
    <string name="bmi_cat_5">Overweight</string>
    <string name="bmi_cat_6">Obese Class I (Moderately obese)</string>
    <string name="bmi_cat_7">Obese Class II (Severely obese)</string>
    <string name="bmi_cat_8">Obese Class III (Very severely obese)</string>
    <string name="bmi_cat_9">Obese Class IV (Morbidly Obese)</string>
    <string name="bmi_cat_10">Obese Class V (Super Obese)</string>
    <string name="bmi_cat_11">Obese Class VI (Hyper Obese)</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="default_unit">@string/metric</string>

    <!-- Intro slides -->
    <string name="intro_slide1_header">Welcome to SMHS</string>
    <string name="intro_slide1_body">SMSH is a personal tool that helps students keep track of their mental health</string>
    <string name="intro_slide2_header">Blog</string>
    <string name="intro_slide2_body">Use the anonymous blog to write more detailed information about how you\'re feeling</string>
    <string name="intro_slide3_header">Mood Graph</string>
    <string name="intro_slide3_body">Use the graph to view your mood history throughout the week</string>
    <string name="intro_slide4_header">Resources</string>
    <string name="intro_slide4_body">Get suggested articles and videos that can help you improve your mood</string>
    <string name="intro_slide5_header">Location and Apps</string>
    <string name="intro_slide5_body">Track your movement and app usage to better understand your moods</string>
    <string name="intro_slide6_header">Terms and Conditions</string>
    <string name="intro_slide6_body">Please read the terms and conditions before you use the app</string>

    <!-- BottomNavigationView strings -->
    <string name="menu_journal">Journal</string>
    <string name="menu_resources">Resources</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_help">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="google_map_key">AIzaSyDJjueDslcOBN47q26kdeExAP0_J336YPc</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="API_KEY">AIzaSyD4mj7IEBUVjWIvgwDg0yQjdRwQd5xNx8Q</string>

    <string name="login_string">Already have an account? <b>Login here</b></string>

    <string name="open_navigation_drawer">Open Drawer</string>
    <string name="close_navigation_drawer">Open Drawer</string>

</resources>