<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- TODO: Add icons using SVG images then check the sizes -->
    <item android:id="@+id/nav_home"
        android:title="Home"
        android:icon="@drawable/ic_home_black_24dp"/>
    <item android:id="@+id/nav_journal"
        android:title="@string/menu_journal"
        android:icon="@drawable/ic_journal"/>
    <item android:id="@+id/nav_resources"
        android:title="@string/menu_resources"
        android:icon="@drawable/ic_resources"/>
    <item android:id="@+id/nav_statistics"
        android:title="@string/menu_statistics"
        android:icon="@drawable/ic_statistics"/>
    <item android:id="@+id/nav_settings2"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"/>
</menu>